removes UseConcMarkSweepGC for main