@@ -65,7 +65,7 @@ class VaultCompatibilityBuildMaker extends CompatibilityBuildMaker implements Ha
 					goals('--version')
 				}
 				// #!/bin/bash must be first in the line without tabs
-				shell("""${antiPermgenAndJava7TlsHack()}
+				shell("""${antiPermgenAndJava7TlsHack(branchName)}
 						${preVaultShell()}
 						trap "{ ${postVaultShell()} }" EXIT
 						${ checkTests ? runTestsForBoot() : compileProductionForBoot()}
@@ -82,7 +82,10 @@ class VaultCompatibilityBuildMaker extends CompatibilityBuildMaker implements Ha
 		}
 	}
 
-	protected String antiPermgenAndJava7TlsHack() {
+	protected String antiPermgenAndJava7TlsHack(branchName) {
+		if (branchName == "main") {
+			return '#!/bin/bash -x\nexport MAVEN_OPTS="-Xms256M -Xmx1024M -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=4096M -Dhttps.protocols=TLSv1.2"'
+		}
 		return '#!/bin/bash -x\nexport MAVEN_OPTS="-Xms256M -Xmx1024M -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=4096M -Dhttps.protocols=TLSv1.2"'
 	}
 
